# NumberShadow

./: Cargo.toml  README.md  makefile  requirements.txt
benches/: sprs_bench.rs
jupyter/: AnalyzeData-Copy1.ipynb  AnalyzeData.ipynb  CheckHam-Copy1.ipynb  CheckHam.ipynb  CheckHamXXZ.ipynb  EigenvaluesPlot.ipynb  Ladder-Example.ipynb  Ladder.ipynb  LadderLargeED.ipynb  ShadowNumerics.ipynb  SimpleExample.ipynb  SimulationConsInverse.ipynb  TestSampling.ipynb  TestSamplingStd.ipynb  TestVariances.ipynb  VarianceTest.ipynb  plot_data.pickle
jupyter/backup/: zzplot_data.pickle
src/: lib.rs  recon.rs  samples.rs  sims.rs  utils.rs
