[package]
name = "shadow_reconstruction"
version = "0.1.0"
edition = "2021"

[lib]
name = "shadow_reconstruction"
crate-type = ["cdylib"]

[features]

[dependencies]
pyo3 = { version = "*", features = ["extension-module", "num-complex"] }
ndarray = {version = "*", features = ["rayon"]}
num-complex = "*"
numpy = "^0.19"
num-traits = "*"
rayon = "*"
sprs = "^0.11"
rand = "^0.8"
serde = {version = "^1.0", features = ["derive"]}
bincode = "^1.3"
qip-iterators = "^1.4"
num-rational = "^0.4"
num-bigint = "^0.4"