[package]
name = "shadow_reconstruction"
version = "0.1.0"
edition = "2021"

[lib]
name = "shadow_reconstruction"
crate-type = ["cdylib"]

[features]
default = ["sampling"]
sampling = ["qip-iterators", "sprs"]

[dependencies]
serde = {version = "*", features = ["derive"]}
pyo3 = { version = "*", features = ["extension-module", "num-complex"] }
ndarray = {version = "*", features = ["rayon", "serde"]}
num-complex = {version = "*", features = ["serde"]}
num-rational = "*"
num-bigint = "*"
numpy = "^0.19"
num-traits = "*"
rayon = "*"
rand = "*"
bincode = "*"
sprs = {version = "^0.11", optional = true}
qip-iterators = {version = "^1.4", default-features = false, optional = true}


[dependencies.ndarray-linalg]
version = "*"
features = ["openblas-system"]